clang/test/BSC/Negative/Method/Struct/struct_instance_function_redefinition/struct_instance_function_redefinition.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

int struct Foo::getA(struct Foo* this) { // expected-note {{previous definition is here}}
  return this->a;
}

int struct Foo::getA(struct Foo* this) { // expected-error {{redefinition of 'getA'}}
  return this->a;
}

int main() {
  struct Foo foo = {.a = 1};
  foo.getA();
  return 0;
}